--- a/ios/browserstack.yml
+++ b/ios/browserstack.yml
@@ -43,8 +43,7 @@ platforms:
   - deviceName: iPhone 13 Pro
     osVersion: 15
     platformName: ios
-  - deviceName: iPhone 15 Plus
-    osVersion: 17
+  - deviceName: iPhone 15 Pro
     platformName: ios
 
 # ==========================================
