--- a/ios/package.json
+++ b/ios/package.json
@@ -4,7 +4,7 @@
   "description": "Mocha nodeJS Appium integration with BrowserStack",
   "main": "index.js",
   "scripts": {
-    "sample-test": "browserstack-node-sdk mocha specs/single_test.js",
+    "sample-test": "browserstack-node-sdk mocha m*/test.js",
     "sample-local-test": "browserstack-node-sdk mocha specs/local_test.js",
     "postinstall": "npm update browserstack-node-sdk"
   },
