--- a/ios/browserstack.yml
+++ b/ios/browserstack.yml
@@ -30,6 +30,8 @@ source: node:appium-sample-sdk:v1.0
 app: ./BStackSampleApp.ipa
 # app: ./LocalSample.ipa #For running local tests
 
+CUSTOM_TAG_1: bstack_sample
+
 # =======================================
 # Platforms (Browsers / Devices to test)
 # =======================================
